--- a/view/login.html
+++ b/view/login.html
@@ -21,7 +21,7 @@
       <img src="../public/assets/img/cereal-logo.png" alt="Logo de la Ferme">
       <a href="../index.html"><i class="fa-solid fa-house"></i></a>
       <!-- <a href="view/login.html"><i class="fa-solid fa-right-to-bracket"></i></a> -->
-      <a href="view/panier.html"><i class="fa-solid fa-cart-shopping"></i></a>
+      <!-- <a href="/view/panier.html"><i class="fa-solid fa-cart-shopping"></i></a> -->
     </figure>
   </header>
 
@@ -45,7 +45,7 @@
 
         <div class="social">
     
-        <a href="#"><img src="../public/assets/img/instagram.png" alt="" width="55%">
+        <a href="https://www.instagram.com/"><img src="../public/assets/img/instagram.png" alt="" width="55%">
           <i class="icon ion-social-instagram"></i></a>
           <a href="https://www.facebook.com/"><img src="../public/assets/img/facebook.png" alt="" width="55%">
             <i class="icon ion-social-snapchat"></i></a>
@@ -55,17 +55,6 @@
     </section>
 
 
- <!-- <main class="container-formulaire">
-  <form  id="login-form">
-    <input type="email"  id="email" placeholder="Entrez votre mail" required >
-    <input type="password" id="password" placeholder="Entrez votre mot de passe" required>
-    <button type="submit"> Envoyer</button>
-    <button type="reset"> Réinitialiser</button>
-    <p class="page-link">
-      <span class="page-link-label">mot de passe?</span>
-    </p>
-  </form>
- </main> -->
 
 
 
