--- a/public/assets/css/product.css
+++ b/public/assets/css/product.css
@@ -7,23 +7,7 @@
 
 body{
     background-image: url(../img/barley-field-1684052_640.jpg);
-
-
-/* .content img{
-    width: 90%;
-    height: 350px;
-    background: rgba(0, 0, 0, 0.5);;
-    border-radius: 10px;
-    margin-left: 100px;
-    margin-top: 200px;
-    box-shadow: 0 10px 30px rgba(27, 26, 26, 0.12), 0 10px 2px rgba(41, 37, 37, 0.24);
-
-} */
-
-/* .content{
-    padding: 20px;
-} */
-/* product */
+}
 
 .container{
     display: flex;
@@ -69,3 +53,20 @@ body{
     object-fit: contain;
 }
 
+@media screen and (max-width:990px)  {
+    .container{
+        width: 500px;
+        height: 200px;
+        gap: 10px;
+    }
+
+    .container-product{
+        width: 250px;
+        height: 150px;
+    }
+
+    .container-image img{
+        width: 50%;
+    }
+    
+}
