--- a/public/assets/css/product.css
+++ b/public/assets/css/product.css
@@ -1,4 +1,4 @@
-*{
+/* *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -15,13 +15,10 @@ body{
     align-items: center;
     padding: 10px 0;
     overflow-x: auto;
-    /* border: 20px solid #f5f2eb96; */
     width: 100%;
     height: 100%;
     gap: 20px;
 }
-
-
 
 .container-product{
     display: flex;
@@ -34,7 +31,6 @@ body{
     height: 400px;
     box-shadow: 0 1px 3px rgba(151, 140, 140, 0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: transform 0.7s;
-    /* border: 2px solid black; */
 }
 
 .container-product:hover{
@@ -69,4 +65,4 @@ body{
         width: 50%;
     }
     
-}
+} */
