--- a/view/login.html
+++ b/view/login.html
@@ -21,7 +21,7 @@
       <img src="../public/assets/img/cereal-logo.png" alt="Logo de la Ferme">
       <a href="../index.html"><i class="fa-solid fa-house"></i></a>
       <!-- <a href="view/login.html"><i class="fa-solid fa-right-to-bracket"></i></a> -->
-      <!-- <a href="/view/panier.html"><i class="fa-solid fa-cart-shopping"></i></a> -->
+      <a href="/view/panier.html"><i class="fa-solid fa-cart-shopping"></i></a>
     </figure>
   </header>
 
